samples/_failures_safe/1761070643_9d7166_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_204637fe.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_204637fe.c:169:9: error: expected expression at end of input
  169 |         case TOKEN_EOF: return
      |         ^~~~
./samples/SAFE/__tmp_204637fe.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_204637fe.c:169:9: error: expected declaration or statement at end of input
